--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header {
   padding-top: 3vh;
 }
 .container {
-  padding: 2vw 0 20vh;
+  padding: 0 0 20vh;
   width: 100%;
 }
 
@@ -57,6 +57,10 @@ form {
   margin: 0 auto 4vh;
   width: 95%;
   max-width: 600px;
+}
+
+.edit-form {
+  flex: auto;
 }
 
 input {
@@ -72,13 +76,14 @@ button {
 
 .task {
   display: grid;
-  grid-template-columns: 1fr 6fr 1fr;
+  grid-template-columns: 1fr 6fr 1fr 1fr;
   row-gap: 0.5rem;
+  column-gap: 0.5rem;
   align-items: center;
   width: 95%;
   max-width: 600px;
   margin: 0 auto 3vh;
-  padding: 2vh 3vh 1vh;
+  padding: 2vh 2vh 1vh;
 }
 
 .title,
@@ -86,6 +91,10 @@ button {
   text-align: left;
 }
 
+.delete-icon {
+  justify-self: right;
+  width: 15px;
+}
 .date {
   grid-column: 2 / -1;
 }
@@ -141,6 +150,7 @@ button {
 .completed {
   opacity: 0.5;
 }
+
 .date {
   font-size: 0.8rem;
   color: burlywood;
