--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
   position: fixed;
   bottom: 0px;
   width: 100%;
-  height: 20vh;
+  height: 15vh;
 }
 
 footer a {
@@ -133,6 +133,7 @@ footer a {
 
 body {
   background-color: var(--primary-background-color);
+  color: var(--primary-color);
 }
 
 h1 {
@@ -199,19 +200,19 @@ footer {
   background: -moz-linear-gradient(
     top,
     rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 48%,
-    rgba(255, 255, 255, 1) 54%
+    var(--primary-background-color) 48%,
+    var(--primary-background-color) 54%
   );
   background: -webkit-linear-gradient(
     top,
     rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 48%,
-    rgba(255, 255, 255, 1) 54%
+    var(--primary-background-color) 48%,
+    var(--primary-background-color) 54%
   );
   background: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 48%,
-    rgba(255, 255, 255, 1) 54%
+    var(--primary-background-color) 48%,
+    var(--primary-background-color) 54%
   );
 }
